deploy/backend/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: ${REV}
    istio-discovery: enabled
  name: ${NAMESPACE}
spec: {}
