deploy/backend/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
spec:
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
        version: v1 # Good practice to always label for subsets, even if only one version initially
      annotations:
        # This ensures Istio sidecar injection if not using SMMR auto-injection
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: product-api
        image: localhost/app:backend
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        env: # Add an environment variable to differentiate responses
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
      - args:
          - --config=/config/collector.yml
        image: localhost/opentelemetry-collector-contrib:0.121.0
        imagePullPolicy: Always
        name: otel
        ports:
          - containerPort: 4317
            protocol: TCP
          - containerPort: 4318
            protocol: TCP
          - containerPort: 50514
            protocol: TCP
          - containerPort: 50514
            protocol: UDP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: /config/collector.yml
            name: collector
            readOnly: true
            subPath: collector.yml
      imagePullSecrets:
        - name: quay-home
      volumes:
        - configMap:
            defaultMode: 420
            name: collector
            optional: true
          name: collector
