deploy/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-api
spec:
  selector:
    app: product-api
  ports:
  - protocol: TCP
    name: http-8080
    port: 8080
    targetPort: 8080
